<resources>
    <string name="app_name">GoodAutoDeal</string>
    <string name="facebook_app_id">1494001490793820</string>
    <string name="fb_login_protocol_scheme">fb1494001490793820</string>
    <string name="home">Home</string>
    <string name="sell_car">Sell My Car</string>
    <string name="new_car">New Car</string>
    <string name="used_car">Used Car</string>
    <string name="value_car">Value Your Car</string>
    <string name="dealers">Dealers</string>
    <string name="car_insurance">Car Insurance</string>
    <string name="car_finance">Car Finance</string>
    <string name="faq">FAQ\'s</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="privacy">Privacy Policy</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="hint_email">Enter your email</string>
    <string name="hint_password">Enter your password</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="hint_name">Enter your name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sell_my_car">Sell my car</string>
    <string name="register">Register</string>
    <string name="overview">Overview</string>
    <string name="published">Published</string>
    <string name="pending">Pending</string>
    <string name="rejected">Rejected</string>
    <string name="sold">Sold Vehicles</string>
    <string name="draft">Draft</string>
    <string name="change_pasword">Change Password</string>
    <string name="profile">Profile</string>
    <string name="favourite">Favourite</string>
    <string-array name="nav_drawer_labels">
        <item>@string/home</item>
        <item>@string/profile</item>
        <item>@string/sell_my_car</item>
        <item>@string/new_car</item>
        <item>@string/used_car</item>
        <item>@string/favourite</item>
        <item>@string/value_car</item>
        <item>@string/dealers</item>
        <item>@string/car_insurance</item>
        <item>@string/car_finance</item>
        <item>@string/change_pasword</item>
        <item>@string/faq</item>
        <item>@string/contact_us</item>
        <item>@string/logout</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="vehicle_details">Vehicle Details</string>
    <string name="ads_management">Ads Management</string>
    <string name="car_details">Car Details</string>
    <string name="address">Address:</string>
    <string name="contact">Contact:</string>
    <string name="email">Email:</string>
    <string name="view_website">View Website</string>
    <string name="contact_dealer">Contact Dealer</string>
    <string name="new_cars">New Cars</string>
    <string name="enter_your_new_password">Enter your new password</string>
    <string name="confrim_your_new_password">Confrim your new password</string>
    <string name="enter_your_current_password">Enter your current password</string>
    <string name="enter_your_phone_number">Enter your Phone Number</string>
    <string name="enter_your_description">Enter your Description</string>
    <string name="send">Send</string>
    <string name="faq_s">FAQ\'s</string>
    <string name="forgot_detail">Enter your registered email to reset your password</string>
    <string name="search">Search</string>
    <string name="view_your_ads">View Your Ads</string>
    <string name="your_post_added_successfully">Your Post Added Successfully</string>
    <string name="ad_submit">Ad Submit</string>
    <string name="notification">Notification</string>
    <string name="dashboard">Dashboard</string>
    <string name="more">More</string>
    <string name="car_history">Car History</string>
    <string name="logout">Logout</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="field_empty">Password Field Cannot Be Empty</string>
    <string name="minimum_character">Password should be minimum 6 digits length</string>
    <string name="password_mismatch">Passwords mismatch</string>
    <string name="loading">Loading...</string>
    <string name="no_interrnet_connection">There is no or poor internet connection. Please connect to stable internet connection and try again.</string>
    <string name="choose_any_option">Choose any Option</string>
    <string name="empty_email">Email Field cannot be Empty</string>
    <string name="guest_user">Guest User</string>
    <string name="hint_city">Enter your city</string>
    <string name="hint_address">Enter your Address</string>
    <string name="hint_post_code">Enter your post code</string>
    <string name="read_more">Read More</string>
    <string name="read_less">Read Less</string>
    <string name="update_profile">Update Profile</string>
    <string name="body_">Body</string>
    <string name="transmission_">Transmission</string>
    <string name="emission_">C02 Emission</string>
    <string name="colors_">Colours</string>
    <string name="numdoors_">Number of doors</string>
    <string name="numseats_">Number of seats</string>
    <string name="fuel_">Fuel Type</string>
    <string name="capacity_engine">Engine Capacity</string>
    <string name="fuel_tank">Fuel Tank Capacity</string>
    <string name="bhp">BHP</string>
    <string name="axele_">Driving Axele</string>
    <string name="tax_">Road Tax</string>
    <string name="enter_your_message">Enter your Message</string>
    <string name="title_activity_f_a_q_detail">FAQDetailActivity</string>
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="take_photo">Take Photo</string>
    <string name="chhose_from_gallery">Choose From Gallery</string>
    <string name="select_option">Select Option</string>
    <string name="camera_permission_error">Camera Permission error</string>
    <string name="cancel_btn">Cancel</string>
</resources>