<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="onDealerClick"
            type="com.goodautodeal.goodautodeal.views.activities.DealerMainActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.activities.DealerMainActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bottom_navigation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/btn_dashboard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_baseline_home_24"
                android:drawablePadding="10dp"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:paddingTop="8dp"
                android:text="@string/dashboard"
                android:textColor="@color/unSelectTabColor"
                android:textSize="@dimen/textnormal"
                android:onClick="@{(view)->onDealerClick.onClick(view)}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/profile_btn"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/profile_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_baseline_person_24"
                android:drawablePadding="10dp"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:paddingTop="8dp"
                android:text="@string/profile"
                android:textColor="@color/unSelectTabColor"
                android:textSize="@dimen/textnormal"
                android:onClick="@{(view)->onDealerClick.onClick(view)}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btn_notification"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btn_dashboard"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/btn_notification"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_baseline_notifications_24"
                android:drawablePadding="10dp"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:paddingTop="8dp"
                android:text="@string/notification"
                android:textColor="@color/unSelectTabColor"
                android:textSize="@dimen/textnormal"
                android:onClick="@{(view)->onDealerClick.onClick(view)}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btnMore"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/profile_btn"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/btnMore"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_baseline_more_horiz_24"
                android:drawablePadding="10dp"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:paddingTop="8dp"
                android:text="@string/more"
                android:onClick="@{(view)->onDealerClick.onClick(view)}"
                android:textColor="@color/unSelectTabColor"
                android:textSize="@dimen/textnormal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btn_notification"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>