<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="activity"
            type="com.goodautodeal.goodautodeal.views.activities.AdsManagementActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.activities.AdsManagementActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/tab"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:background="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imgBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:padding="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/back_white" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/ads_management"
                android:textAllCaps="true"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/textnormallarge"
                app:layout_constraintBottom_toBottomOf="@+id/imgBack"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imgBack"
                app:layout_constraintTop_toTopOf="@+id/imgBack" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <HorizontalScrollView
            android:id="@+id/constraintLayout4"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:background="@color/unSelectTabColor"
            android:fillViewport="true"
            android:nestedScrollingEnabled="true"
            android:scrollbars="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tab">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/unSelectTabColor">

                <TextView
                    android:id="@+id/btn_published"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:gravity="center"
                    android:onClick="@{(view)->activity.onClick(view)}"
                    android:paddingLeft="24dp"
                    android:paddingRight="24dp"
                    android:text="@string/published"
                    android:textColor="@color/grey"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/btn_pending"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/view13"
                    android:layout_width="1dp"
                    android:layout_height="wrap_content"
                    android:background="@color/barcolor"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/btn_pending"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/btn_pending"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:gravity="center"
                    android:onClick="@{(view)->activity.onClick(view)}"
                    android:paddingLeft="24dp"
                    android:paddingRight="24dp"
                    android:text="@string/pending"
                    android:textColor="@color/grey"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/btn_rejected"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/btn_published"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/view14"
                    android:layout_width="1dp"
                    android:layout_height="wrap_content"
                    android:background="@color/barcolor"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/btn_rejected"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/btn_rejected"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:gravity="center"
                    android:onClick="@{(view)->activity.onClick(view)}"
                    android:paddingLeft="24dp"
                    android:paddingRight="24dp"
                    android:text="@string/rejected"
                    android:textColor="@color/grey"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/btn_sold"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/btn_pending"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/view15"
                    android:layout_width="1dp"
                    android:layout_height="wrap_content"
                    android:background="@color/barcolor"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/btn_sold"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/btn_sold"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:gravity="center"
                    android:onClick="@{(view)->activity.onClick(view)}"
                    android:paddingLeft="24dp"
                    android:paddingRight="24dp"
                    android:text="@string/sold"
                    android:textColor="@color/grey"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/btn_rejected"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/view16"
                    android:layout_width="1dp"
                    android:layout_height="wrap_content"
                    android:background="@color/barcolor"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/btn_sold"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tab_draft"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:gravity="center"
                    android:onClick="@{(view)->activity.onClick(view)}"
                    android:paddingLeft="24dp"
                    android:paddingRight="24dp"
                    android:text="@string/draft"
                    android:textColor="@color/grey"
                    android:textSize="12sp"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/btn_sold"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </HorizontalScrollView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout4">

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>